unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/litify_pm__COI_Search_Big_Object_Result__b.object-meta.xml
<CustomObject>
    <label>COI Search Big Object Result</label>
    <pluralLabel>COI Search Big Object Results</pluralLabel>
</CustomObject>