unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/fields/litify_pm__COI_Search__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Search__c</fullName>
    <label>COI Search</label>
    <referenceTo>litify_pm__COI_Search__c</referenceTo>
    <relationshipLabel>COI Search Big Object Results</relationshipLabel>
    <relationshipName>COI_Search_Big_Object_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>