unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/fields/litify_pm__Matched_Term_Values__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matched_Term_Values__c</fullName>
    <label>Matched Term Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>