unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/fields/litify_pm__Matched_Terms__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matched_Terms__c</fullName>
    <label>Matched Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>