unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/fields/litify_pm__Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>