unpackaged/main/default/objects/litify_pm__COI_Search_Big_Object_Result__b/fields/litify_pm__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Record_Id__c</fullName>
    <label>Record_Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>